# mkprj

./: README  README.md  SPrj.sh  mkprj.sh
clangFormats/: cpp
cpp/: CMakeLists.txt  CMakePresets.json  main.cpp  postBuild.sh
cpp/cmake/: includes.cmake  module_includes.cmake  module_packages.cmake  module_testing.cmake  pack.cmake  post_build.cmake  script_postBuild.cmake  script_updateSubmodules.cmake  toolchain-debug-clang-linux.cmake  toolchain-release-clang-linux.cmake  toolchain-release-mingw-windows.cmake
cpp/test/: create_tests.sh
ignores/: cpp
licenses/: MIT
